Wed Oct  7 00:27:01 2009  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS.bind_random_port): bind to "::" for IPv6.
	  (Resolv::DNS::ConnectedUDP#initialize): specify is_ipv6 argument of
	  bind_random_port.
	  [ruby-core:25970]

Tue Oct  6 06:26:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* * ext/tk/lib/tk/canvas.rb: *** POTENTIALLY INCOMPATIBLE ***
	  'tags' option of a TkcItem object should give a list of TkcTag objs.

	* ext/tk/lib/tkextlib/vu/dial.rb: fix logical bug.

	* ext/tk/lib/tk/canvas.rb, ext/tk/lib/tkextlib/blt/component.rb: 
	  lack of support for methodcall_optkeys.

Sun Oct  4 22:44:03 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi.rb (CGI.unescapeHTML): fix for hex values 80-FF,
	  single-byte hex entity encodings from 80-FF are valid HTML.
		[ruby-core:25702]

Sun Oct  4 19:30:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (struct {dump,load}_arg): manage with dfree, instead
	  of using local variable which may be moved by context switch.
	  [ruby-dev:39425]

Sun Oct  4 05:34:34 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: add TkVariable#to_hash,to_proc,to_int,
	  to_str,to_ary

Fri Oct  2 17:26:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (LD_SHARED1): typo.

Fri Oct  2 17:09:38 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_fptr_finalize): free fptr to avoid memory leaks.
	  fixed: #2009   [ruby-core:25173] [ruby-dev:39410]

Fri Oct  2 13:54:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_origenviron): remove unused old variable.
	  [ruby-dev:39412]

Fri Oct  2 13:53:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{setup.mak,Makefile.sub,win32.c} (RT_VER): split compiler
	  specification and runtime library specification.

	* win32/Makefile.sub (LD_SHARED*, config.status): no need to embbed
	  manifest if not exist.

Fri Oct  2 13:38:52 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
